<resources>
    <string name="app_name">FlotaEstelar2</string>
    <string name="nombre">Nombre</string>
    <string name="texto">Texto</string>
    <string name="enviar">Enviar</string>
    <string name="bitacoras">Bitacoras</string>
    <string name="tripulantes">Tripulantes</string>
    <string name="misiones">Misiones</string>
    <string name="title_activity_lista_bitacoras">listaBitacoras</string>
    <string name="insertar">Insertar</string>
    <string name="buscar">Buscar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_basic">basicActivity</string>
    <string name="este_es_mi_primer_fragmento">Este es mi primer fragmento</string>
</resources>
