<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/estrellas"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Menu">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="337dp"
        android:layout_height="86dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/voyager" />

    <Button
        android:id="@+id/tripulantes"
        android:layout_width="285dp"
        android:layout_height="19dp"
        android:layout_weight="1"
        android:background="@drawable/estrellas"
        android:onClick="tripulantes"
        android:text="@string/tripulantes"
        android:textColor="@android:color/white"
        android:textSize="40sp" />

    <Button
        android:id="@+id/bitacoras"
        android:layout_width="285dp"
        android:layout_height="19dp"
        android:layout_weight="1"
        android:background="@drawable/estrellas"
        android:onClick="bitacoras"
        android:text="@string/bitacoras"
        android:textColor="@android:color/white"
        android:textSize="40sp" />

    <Button
        android:id="@+id/misiones"
        android:layout_width="285dp"
        android:layout_height="19dp"
        android:layout_weight="1"
        android:background="@drawable/estrellas"
        android:onClick="misiones"
        android:text="@string/misiones"
        android:textColor="@android:color/white"
        android:textSize="40sp" />
</LinearLayout>