<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/estrellas"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Contacto">

    <EditText
        android:id="@+id/nombre"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/white"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/texto"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/white"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/texto"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:textSize="40sp" />

    <SeekBar
        android:id="@+id/barraContacto"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:max="100"
        app:tickMark="@android:color/holo_red_dark" />

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:onClick="verContacto"
        android:text="@string/enviar" />

</LinearLayout>